--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html lang="en"></html>
+<html lang="en">
+
+</html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +11,121 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap cdn-->
-    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
-<body class="d-flex justify-content-center align-items-center" style="background-color: black">
-        <div class="row">
 
-        <img class="col-12"src="giphy.gif" height="350vh" alt="">
+<body class="d-flex justify-content-center align-items-end" style="background-color: #FAD986;">
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+        <!-- Background decorative circle -->
+        <!-- <circle cx="400" cy="200" r="180" fill="none" stroke="#B8860B" stroke-width="4" stroke-dasharray="4,4"/> -->
+
+        <g>
+
+            <!-- Bow -->
+            <g id="bow">
+                <path d="M80 320 Q200 200 320 320" fill="none" stroke="#8B4513" stroke-width="8" />
+                <path d="M85 315 Q205 205 315 315" fill="none" stroke="#A0522D" stroke-width="4" />
+
+                <!-- Decorative patterns on bow -->
+                <path d="M100 300 Q150 250 200 300" fill="none" stroke="#DAA520" stroke-width="3" />
+                <path d="M200 300 Q250 250 300 300" fill="none" stroke="#DAA520" stroke-width="3" />
+
+                <!-- Sanskrit-inspired decorative elements -->
+                <path d="M170 270 C175 260, 175 250, 170 240" fill="none" stroke="#B8860B" stroke-width="3" />
+                <path d="M230 270 C225 260, 225 250, 230 240" fill="none" stroke="#B8860B" stroke-width="3" />
+
+                <!-- Small decorative circles -->
+                <circle cx="85" cy="320" r="9" fill="#DAA520" />
+                <circle cx="315" cy="320" r="9" fill="#DAA520" />
+            </g>
+
+
+            <!-- Bowstring -->
+            <!-- <path id="bowstring" d="M300 85 L300 315" fill="none" stroke="#FFF8DC" stroke-width="5" /> -->
+
+            <g id="arrow">
+                <!-- Arrow shaft -->
+                <line x1="200" y1="300" x2="200" y2="70" stroke="#CD853F" stroke-width="7" />
+
+                <!-- Arrow head -->
+                <path d="M200 60 L180 105 L200 90 L220 105 Z" fill="#8B4513" />
+
+                <!-- Arrow fletching -->
+                <path d="M200 290 L180 320 L220 320 Z" fill="#DEB887" />
+            </g>
+
+
+        </g>
+
+    </svg>
+
+
+
+    <div class="reveal">
 
     </div>
 
-    <!-- Bootstrap cdn-->  
-    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Bootstrap cdn-->
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- iconify -->
-   <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
 
+
+    <script>
+        console.log(gsap)
+        const t1 = gsap.timeline({ default: { ease: 'power4.out', duration: 5 } })
+
+        gsap.set('g', {
+            autoApha: 1
+        })
+
+        // gsap.to('svg', {
+        //     scale: 1.2,
+        //     duration: 4
+        // })
+
+        t1
+        .from('g', {
+            xPercent: -50,
+            ease: 'elastic.out(1, 0.5)'
+        }, "-=.7")
+        .to('svg', {
+            duration: 0.7,
+            rotation: 1080,
+        })
+        .to('#arrow', {
+            duration: 0.7,
+            yPercent: 30
+        })
+        .to('#arrow', {
+            yPercent: -1000,
+            ease: 'back.in(1)',
+            duration: 2,
+        }, "-=0.1")
+        .to('#bow', {
+            yPercent: 1000,
+            ease: 'back.out(1)',
+            duration: 1,
+        }, "-=.1")
+        .to('.reveal', {
+            scaleY: 0,
+            transformOrigin: 'top',
+            duration: 2,
+            ease: 'power4,inOut'
+        },"-=1.7")
+
+
+    </script>
 </body>
+
 </html>
