--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pandevs.org</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap cdn-->
@@ -62,11 +62,48 @@
 
     </svg>
 
-
-
     <div class="reveal">
 
     </div>
+
+    <div class="main d-none">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-unscrolled">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <!-- <img src="/public/content/logo.webp" class="logo rounded-circle" style="" alt="rumblesheet logo"> -->
+                    Pandevs.org
+                </a>
+                <button class="hamburger hamburger--vortex navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link" aria-label="home link" aria-current="page" href="#home">Home</a>
+                        <a class="nav-link" aria-label="get started link" href="./docs/latest/getting-started/index.html">Our Quest</a>
+                        <a class="nav-link" aria-label="examples link" href="#examples">The Pandava Code</a>
+                        <a class="nav-link" aria-label="contribute link" href="#contribute">Pandevs</a>
+                        <a class="nav-link" aria-label="contribute link" href="#contribute">Connect with     Us</a>
+                        <a id="nav-item" target="_blank" aria-label="Fork" data-balloon-pos="down"
+                            href="https://github.com/BorisEdison/Honey-Badger"
+                            class="d-flex align-items-center justify-content-start">
+                            <button class="fork-btn" aria-label="fork btn"
+                                class="d-flex justify-content-center align-items-center">
+                                <span class="iconify" data-icon="mdi:github" data-width="23" data-height="23"></span>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+
+    </div>
+   
 
     <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
@@ -82,7 +119,11 @@
 
 
     <script>
-        console.log(gsap)
+        setTimeout(function(){
+            document.querySelector('.main').classList.remove("d-none");
+            console.log("hello")
+        }, 5000);
+
         const t1 = gsap.timeline({ default: { ease: 'power4.out', duration: 5 } })
 
         gsap.set('g', {
