--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="main">
 
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg fixed-top navbar-unscrolled">
+        <nav class="navbar d-none navbar-expand-lg fixed-top navbar-unscrolled">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <!-- <img src="/public/content/logo.webp" class="logo rounded-circle" style="" alt="rumblesheet logo"> -->
@@ -84,14 +84,16 @@
         background-repeat: no-repeat;">
 
             <div class="content content-primary">
-                <h3 class="section-heading text-center mt-3" style="font-family: 'saman'; font-size: 2.5rem; color: F68D33;    text-shadow: 
-                    1px 3px 0px rgba(0, 0, 0, 0.2);">The Pandevs</h3>
+                <h3 class="section-heading text-center mt-3" style="font-family: 'saman'; font-size: 2.5rem; 
+                color: F68D33;    
+                text-shadow: 
+                    1px 3px 0px rgba(0, 0, 0, 0.4);">The Pandevs</h3>
 
                 <div class="row mb-5">
                     <!-- aashish -->
                     <div class="col-lg-4 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
-                        <div class="project-outer-div d-flex justify-content-center">
-                            <div class="card-body project-div dharma-chakra-border" data-aos="fade-up"
+                        <div class="pandevs-outer-div pandevs-shadow-top-left d-flex justify-content-center">
+                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
                                 <figure class="project-figure  d-flex justify-content-center">
@@ -100,7 +102,7 @@
 
                                 <div class="row pt-2">
                                     <div class="col-12 d-flex justify-content-center align-items-center">
-                                        <h4 class="project-heading mb-0">
+                                        <h4 class="pandevs-heading mb-0">
                                             Nakul
                                         </h4>
                                     </div>
@@ -153,8 +155,8 @@
 
                     <!-- aditya -->
                     <div class="col-lg-4 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
-                        <div class="project-outer-div d-flex justify-content-center">
-                            <div class="card-body project-div dharma-chakra-border" data-aos="fade-up"
+                        <div class="pandevs-outer-div pandevs-shadow-top-middle d-flex justify-content-center">
+                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
                                 <figure class="project-figure  d-flex justify-content-center">
@@ -163,7 +165,7 @@
 
                                 <div class="row pt-2">
                                     <div class="col-12 d-flex justify-content-center align-items-center">
-                                        <h4 class="project-heading mb-0">
+                                        <h4 class="pandevs-heading mb-0">
                                             Bheem
                                         </h4>
                                     </div>
@@ -216,8 +218,8 @@
 
                     <!-- boris -->
                     <div class="col-lg-4 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
-                        <div class="project-outer-div d-flex justify-content-center">
-                            <div class="card-body project-div dharma-chakra-border" data-aos="fade-up"
+                        <div class="pandevs-outer-div pandevs-shadow-top-right d-flex justify-content-center">
+                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
                                 <figure class="project-figure  d-flex justify-content-center">
@@ -226,7 +228,7 @@
 
                                 <div class="row pt-2">
                                     <div class="col-12 d-flex justify-content-center align-items-center">
-                                        <h4 class="project-heading mb-0">
+                                        <h4 class="pandevs-heading mb-0">
                                             Yudhishthira
                                         </h4>
                                     </div>
@@ -279,8 +281,8 @@
 
                     <!-- rohan -->
                     <div class="col-lg-6 col-md-6 mt-5 p-0 col-sm-12  d-flex justify-content-center">
-                        <div class="project-outer-div d-flex justify-content-center">
-                            <div class="card-body project-div dharma-chakra-border" data-aos="fade-up"
+                        <div class="pandevs-outer-div pandevs-shadow-bottom-left d-flex justify-content-center">
+                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
                                 <figure class="project-figure  d-flex justify-content-center">
@@ -289,7 +291,7 @@
 
                                 <div class="row pt-2">
                                     <div class="col-12 d-flex justify-content-center align-items-center">
-                                        <h4 class="project-heading mb-0">
+                                        <h4 class="pandevs-heading mb-0">
                                             Arjuna
                                         </h4>
                                     </div>
@@ -342,8 +344,8 @@
 
                     <!-- shivendra -->
                     <div class="col-lg-6 col-md-12 mt-5 p-0 col-sm-12  d-flex justify-content-center">
-                        <div class="project-outer-div d-flex justify-content-center">
-                            <div class="card-body project-div dharma-chakra-border" data-aos="fade-up"
+                        <div class="pandevs-outer-div pandevs-shadow-bottom-right d-flex justify-content-center">
+                            <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
                                 <figure class="project-figure  d-flex justify-content-center">
@@ -352,7 +354,7 @@
 
                                 <div class="row pt-2">
                                     <div class="col-12 d-flex justify-content-center align-items-center">
-                                        <h4 class="project-heading mb-0">
+                                        <h4 class="pandevs-heading mb-0">
                                             Sahadev
                                         </h4>
                                     </div>
@@ -416,31 +418,72 @@
         <section id="connect-with-us-section"
             class="section section-secondary d-flex justify-content-center align-items-center pt-5">
             <div class="content content-primary">
-                <h3 class="section-heading text-center mt-3" style="font-family: 'saman'; font-size: 2.5rem; color: F68D33;    text-shadow:
-                    2px 2px 0px rgba(246, 141, 51, 0.3);">Connect with us</h3>
-
-
+                <h3 class="section-heading text-center mt-3" style="font-family: 'saman'; 
+                font-size: 2.5rem; color: F68D33;    
+                text-shadow:
+                    1px 3px 0px rgba(246, 141, 51, 0.3);">Connect with us</h3>
                 <div class="row mt-5">
-                    <div class="col-12 d-flex justify-content-center align-items-center">
-                        <h6 class="section-sub-heading d-inline mb-0">Email: </h6>
-                        <span class="email-text">opensource@pandevs.org</span>
+                    <div class="col-6">
+                        <div class="col-12 d-flex justify-content-start align-items-center">
+                            <div class="row">
+                                <div class="col-12">
+                                    <h4 class="section-sub-heading mb-0" style="font-family: 'saman'; color: #F68D33;">
+                                        Pandevs.org</h4>
+
+                                </div>
+                                <div class="col-12">
+                                    <p class="mt-2"
+                                        style="color: #E5C14F; font-family: 'yatra one'; text-align: justify; width: 450px;">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos cumque
+                                        velit at. Ipsa similique quis cumque sapiente. Rem, explicabo odio.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-end align-items-center">
+                                <h6 class="section-sub-heading d-inline mb-0"> Email: </h6>
+                                <a class="email-text" href="mailto:borisedison@gmail.com"
+                                    aria-label="mail link">opensource@pandevs.org</a>
+                            </div>
+
+                            <div class="col-12 mt-3 d-flex align-items-center justify-content-end">
+                                <a class="social-links" href="https://github.com/BorisEdison" aria-label="github link"
+                                    target="_blank">
+                                    <span class="iconify social-links-logo" data-icon="ri:github-fill" data-width="45"
+                                        data-height="45"></span>
+                                </a>
+
+                                <a class="social-links" href="https://www.linkedin.com/in/borisedison/"
+                                    aria-label="linkedin link" target="_blank">
+                                    <span class="iconify social-links-logo" data-icon="ic:sharp-discord" data-width="45"
+                                        data-height="45"></span>
+                                </a>
+
+                                <a class="social-links" href="https://www.linkedin.com/in/borisedison/"
+                                    aria-label="linkedin link" target="_blank">
+                                    <span class="iconify social-links-logo" data-icon="mdi:linkedin" data-width="45"
+                                        data-height="45"></span>
+                                </a>
+
+                                <a class="social-links " href="https://www.instagram.com/_boris_edison_/"
+                                    aria-label="instagram link" target="_blank">
+                                    <span class="iconify social-links-logo" data-icon="fa6-brands:x-twitter"
+                                        data-width="45" data-height="45"></span>
+                                </a>
+
+                                <a class="social-links" href="https://www.instagram.com/_boris_edison_/"
+                                    aria-label="instagram link" target="_blank">
+                                    <span class="iconify social-links-logo" data-icon="ri:instagram-line"
+                                        data-width="45" data-height="45"></span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="col-12 mt-3 d-flex align-items-center justify-content-center">
-                        <a class="social-links" href="https://github.com/BorisEdison" aria-label="github link"
-                            target="_blank">
-
-                        </a>
-                        <a class="m-3 mt-0 mb-0 social-links" href="https://www.linkedin.com/in/borisedison/"
-                            aria-label="linkedin link" target="_blank">
-                        </a>
-                        <a class="social-links " href="https://www.instagram.com/_boris_edison_/"
-                            aria-label="instagram link" target="_blank">
-
-                        </a>
-                    </div>
-
-                    <div class="col-12 d-flex justify-content-center align-items-center mt-3">
+                    <div class="col-12 d-flex justify-content-center align-items-center mt-5 mb-2">
                         <p href="#" style="font-family: 'yatra one'; color: F68D33;">© 2025, pandevs.org</p>
                     </div>
 
