--- a/index.html
+++ b/index.html
@@ -23,13 +23,54 @@
 
 <body class="" style="background-color: #5A382C;">
 
+    <div class="reveal">
 
 
-    <!-- <div class="reveal">
+        <svg class="arrow-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+            <!-- Background decorative circle -->
+            <!-- <circle cx="400" cy="200" r="180" fill="none" stroke="#B8860B" stroke-width="4" stroke-dasharray="4,4"/> -->
 
-    </div> -->
+            <g>
 
-    <div class="main">
+                <!-- Bow -->
+                <g id="bow">
+                    <path d="M80 320 Q200 200 320 320" fill="none" stroke="#8B4513" stroke-width="8" />
+                    <path d="M85 315 Q205 205 315 315" fill="none" stroke="#A0522D" stroke-width="4" />
+
+                    <!-- Decorative patterns on bow -->
+                    <path d="M100 300 Q150 250 200 300" fill="none" stroke="#DAA520" stroke-width="3" />
+                    <path d="M200 300 Q250 250 300 300" fill="none" stroke="#DAA520" stroke-width="3" />
+
+                    <!-- Sanskrit-inspired decorative elements -->
+                    <path d="M170 270 C175 260, 175 250, 170 240" fill="none" stroke="#B8860B" stroke-width="3" />
+                    <path d="M230 270 C225 260, 225 250, 230 240" fill="none" stroke="#B8860B" stroke-width="3" />
+
+                    <!-- Small decorative circles -->
+                    <circle cx="85" cy="320" r="9" fill="#DAA520" />
+                    <circle cx="315" cy="320" r="9" fill="#DAA520" />
+                </g>
+
+
+                <!-- Bowstring -->
+                <!-- <path id="bowstring" d="M300 85 L300 315" fill="none" stroke="#FFF8DC" stroke-width="5" /> -->
+
+                <g id="arrow">
+                    <!-- Arrow shaft -->
+                    <line x1="200" y1="300" x2="200" y2="70" stroke="#CD853F" stroke-width="7" />
+
+                    <!-- Arrow head -->
+                    <path d="M200 60 L180 105 L200 90 L220 105 Z" fill="#8B4513" />
+
+                    <!-- Arrow fletching -->
+                    <path d="M200 290 L180 320 L220 320 Z" fill="#DEB887" />
+                </g>
+
+            </g>
+
+        </svg>
+    </div>
+
+    <div class="main d-none">
 
         <!-- navbar -->
         <nav class="navbar d-none navbar-expand-lg fixed-top navbar-unscrolled">
@@ -497,10 +538,8 @@
 
 
     <!-- gsap -->
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1https://file+.vscode-resource.vscode-cdn.net/Users/borisedison/Desktop/pandevs.org-website/assets/borderSvgs/dharma-chakra.png?version%3D17306294806772.5/gsap.min.js"
-        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
 
     <!-- Bootstrap cdn-->
     <link href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -512,6 +551,8 @@
 
     <!-- iconify -->
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+
+    <script src="js/script.js"></script>
 
 </body>
 
