--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pandevs.org</title>
 
-    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/globals.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/home.css">
@@ -29,7 +29,7 @@
             <g>
                 <!-- Bow -->
                 <g id="bow">
-                    <path d="M80 320 Q200 200 320 320" fill="none" stroke="#8B4513" stroke-width="8" />
+                    <path d="M80 320 Q200 200 320 320" fill="none" stroke="var(--clr-accent-800)" stroke-width="8" />
                     <path d="M85 315 Q205 205 315 315" fill="none" stroke="#A0522D" stroke-width="4" />
 
                     <!-- Decorative patterns on bow -->
