--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <g>
                 <!-- Bow -->
                 <g id="bow">
-                    <path d="M80 320 Q200 200 320 320" fill="none" stroke="var(--clr-accent-800)" stroke-width="8" />
+                    <path d="M80 320 Q200 200 320 320" fill="none" stroke="#A0522D" stroke-width="8" />
                     <path d="M85 315 Q205 205 315 315" fill="none" stroke="#A0522D" stroke-width="4" />
 
                     <!-- Decorative patterns on bow -->
