made footer responsive

--- a/index.html
+++ b/index.html
@@ -120,20 +120,23 @@
                             <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
-                                <figure class="pandevs-profile-figure  d-flex justify-content-center">
+                                <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
                                         alt="Aashish Kumar Image">
                                 </figure>
 
                                 <div class="row pt-2">
-                                    <div class="col-12 d-flex justify-content-center align-items-center">
+                                    <div class="col-12 d-flex justify-content-center align-items-center flex-column">
                                         <h4 class="pandevs-heading mb-0">
-                                            Nakul
+                                            Ashish Maurya 
                                         </h4>
+                                        <h5 class="pandevs-sub-heading">
+                                            (Nakula)
+                                        </h5>
                                     </div>
                                 </div>
 
-                                <div class="row mt-4">
+                                <div class="row pandevs-social-links-div">
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
@@ -185,20 +188,24 @@
                             <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
-                                <figure class="pandevs-profile-figure  d-flex justify-content-center">
+                                <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
                                         alt="Aditya Rane Image">
                                 </figure>
 
                                 <div class="row pt-2">
-                                    <div class="col-12 d-flex justify-content-center align-items-center">
+                                    <div class="col-12 d-flex justify-content-center align-items-center flex-column">
                                         <h4 class="pandevs-heading mb-0">
-                                            Bheem
+                                            Aditya Rane
                                         </h4>
+
+                                        <h5 class="pandevs-sub-heading">
+                                            (Bhima)
+                                        </h5>
                                     </div>
                                 </div>
 
-                                <div class="row mt-4">
+                                <div class="row pandevs-social-links-div">
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
@@ -250,19 +257,23 @@
                             <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
-                                <figure class="pandevs-profile-figure  d-flex justify-content-center">
+                                <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
                                         alt="Boris Edison Image">
                                 </figure>
 
                                 <div class="row pt-2">
-                                    <div class="col-12 d-flex justify-content-center align-items-center">
+                                    <div class="col-12 d-flex justify-content-center align-items-center flex-column">
                                         <h4 class="pandevs-heading mb-0">
-                                            Yudhishthira
+                                            Boris Edison
                                         </h4>
+
+                                        <h5 class="pandevs-sub-heading">
+                                            (Yudhishtira)
+                                        </h5>
                                     </div>
                                 </div>
-                                <div class="row mt-4">
+                                <div class="row pandevs-social-links-div">
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
@@ -314,19 +325,23 @@
                             <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
-                                <figure class="pandevs-profile-figure  d-flex justify-content-center">
+                                <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
                                         alt="Rohan Singh Image">
                                 </figure>
 
                                 <div class="row pt-2">
-                                    <div class="col-12 d-flex justify-content-center align-items-center">
+                                    <div class="col-12 d-flex justify-content-center align-items-center flex-column">
                                         <h4 class="pandevs-heading mb-0">
-                                            Arjuna
+                                            Rohan Singh
                                         </h4>
+
+                                        <h5 class="pandevs-sub-heading">
+                                            (Arjuna)
+                                        </h5>
                                     </div>
                                 </div>
-                                <div class="row mt-4">
+                                <div class="row pandevs-social-links-div">
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
@@ -378,19 +393,22 @@
                             <div class="card-body pandevs-div dharma-chakra-border" data-aos="fade-up"
                                 data-aos-delay="200">
 
-                                <figure class="pandevs-profile-figure  d-flex justify-content-center">
+                                <figure class="pandevs-profile-figure mt-1 d-flex justify-content-center">
                                     <img src="./assets/pandevsImages/boris.png" class="pandevs-profile-img"
                                         alt="Shivendra Pandey Image">
                                 </figure>
 
                                 <div class="row pt-2">
-                                    <div class="col-12 d-flex justify-content-center align-items-center">
+                                    <div class="col-12 d-flex justify-content-center align-items-center flex-column">
                                         <h4 class="pandevs-heading mb-0">
-                                            Sahadev
+                                            Shivendra Pandey
                                         </h4>
+                                        <h5 class="pandevs-sub-heading">
+                                            (Sahadeva)
+                                        </h5>
                                     </div>
                                 </div>
-                                <div class="row mt-4">
+                                <div class="row pandevs-social-links-div">
 
                                     <div class="col-3 d-flex justify-content-center align-items-center">
 
@@ -476,15 +494,9 @@
                                         <h4 class="section-sub-heading"> Get in Touch</h4>
                                     </div>
                                     <div class="col-12 d-flex align-items-center justify-content-end">
-                                        <a class="social-links" href="https://github.com/BorisEdison" aria-label="github link"
+                                        <a class="social-links" href="https://github.com/pandevs-org" aria-label="github link"
                                             target="_blank">
                                             <span class="iconify social-links-logo" data-icon="ri:github-fill" data-width="45"
-                                                data-height="45"></span>
-                                        </a>
-        
-                                        <a class="social-links" href="https://www.linkedin.com/in/borisedison/"
-                                            aria-label="linkedin link" target="_blank">
-                                            <span class="iconify social-links-logo" data-icon="ic:sharp-discord" data-width="45"
                                                 data-height="45"></span>
                                         </a>
         
